--- a/index.html
+++ b/index.html
@@ -6,11 +6,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Website</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1>Stay Focused on</h1>
-    <h1>Mission 2022</h1>
+    <section>
+        <div class="half-width">
+            <h1>Stay Focused on </h1>
+            <h1 class="gold-color">Mission 2022</h1>
+            <p>To utilize my working skills towards a challenging career in growth oriented and leading edge that will
+                provide
+                mutual benefits and from where I can utilize my capabilities to the fullest benefits of the organization
+                and
+                society. </p>
+            <a class="link-button" target="_blank" href="https://github.com/amrafi30">Explore Now</a>
+            <p>Scroll down to explore more about us</p>
+        </div>
+        <div class="half-width">
+            <img src="images/person/person-1.png" alt="">
+        </div>
+    </section>
 </body>
 
 </html>
