--- a/index.html
+++ b/index.html
@@ -13,22 +13,146 @@
 </head>
 
 <body>
-    <section>
+    <!------------------------------Heading-------------------------------->
+
+    <section class="flexible-container">
         <div class="half-width">
-            <h1>Stay Focused on </h1>
-            <h1 class="gold-color">Mission 2022</h1>
+            <div class="heading">
+                <h1>Stay Focused on<br><span class="coral-color">Mission 2022</span></h1>
+            </div>
             <p>To utilize my working skills towards a challenging career in growth oriented and leading edge that will
                 provide
                 mutual benefits and from where I can utilize my capabilities to the fullest benefits of the organization
                 and
                 society. </p>
             <a class="link-button" target="_blank" href="https://github.com/amrafi30">Explore Now</a>
-            <p>Scroll down to explore more about us</p>
+            <p id="about-us">Scroll down to explore more about us</p>
         </div>
         <div class="half-width">
             <img src="images/person/person-1.png" alt="">
         </div>
+
     </section>
+
+    <!-----------------------------------------Mission-------------------------------------->
+
+    <section class="mission-area">
+        <h1>My Mission in <span class="coral-color">2022</span></h1>
+
+        <div class="flexible-container">
+            <div class="mission-item" style="background-color: Azure;">
+                <div>
+                    <img src="images/illustrators/illustrator-1.png" alt="">
+                </div>
+                <h2>Mission</h2>
+                <p>To utilize my working skills towards a challenging career in growth oriented and leading edge that
+                    will
+                    provide mutual benefits and from where I can utilize my capabilities to the fullest benefits of the
+                    organization and society. </p>
+            </div>
+            <div class="mission-item" style="background-color: LavenderBlush;">
+                <div>
+                    <img src="images/illustrators/illustrator-2.png" alt="">
+                </div>
+                <h2>Vission</h2>
+                <p>To utilize my working skills towards a challenging career in growth oriented and leading edge that
+                    will
+                    provide mutual benefits and from where I can utilize my capabilities to the fullest benefits of the
+                    organization and society. </p>
+            </div>
+            <div class="mission-item" style="background-color: LightYellow;">
+                <div>
+                    <img src="images/illustrators/illustrator-3.png" alt="">
+                </div>
+                <h2>Goals</h2>
+                <p>To utilize my working skills towards a challenging career in growth oriented and leading edge that
+                    will
+                    provide mutual benefits and from where I can utilize my capabilities to the fullest benefits of the
+                    organization and society. </p>
+
+            </div>
+        </div>
+
+    </section>
+
+    <!----------------------------SecondHalfWidth-------------------------------------------->
+
+    <section class=" second-half-background flexible-container">
+        <div class="second-half-width">
+            <img src="images/pictures/coding.png" alt="">
+        </div>
+        <div class="second-half-width">
+            <h1>Develop<br>Without Limits</h1>
+            <p>To utilize my working skills towards a challenging career in growth oriented and leading edge that will
+                provide
+                mutual benefits and from where I can utilize my capabilities to the fullest benefits of the organization
+                and
+                society.</p>
+            <a class="link-button" target="_blank" href="https://github.com/amrafi30">Read The Documentation</a>
+        </div>
+    </section>
+
+    <section class=" third-half-background flexible-container">
+        <div class="half-width">
+            <h1>Know our <br>Global Community</h1>
+            <p>To utilize my working skills towards a challenging career in growth oriented and leading edge that will
+                provide
+                mutual benefits and from where I can utilize my capabilities to the fullest benefits of the organization
+                and
+                society. </p>
+            <a class="link-button" target="_blank" href="https://github.com/amrafi30">Read The Documentation</a>
+        </div>
+        <div class="half-width">
+            <img src="images/pictures/project.png" alt="">
+        </div>
+
+    </section>
+
+    <!-------------------------------Service------------------------------>
+
+    <section class="service-area">
+        <h1>My Services <br> <span class="coral-color" style="font-size: 10px;">what i provide</span></h1>
+
+        <div class="flexible-container">
+            <div class="service-item" style="background-color: Teal;">
+                <h2>Web Design</h2>
+                <p>To utilize my working skills towards a challenging career in growth oriented and leading edge that
+                    will
+                    provide mutual benefits and from where I can utilize my capabilities to the fullest benefits of the
+                    organization and society. </p>
+            </div>
+            <div class="service-item" style="background-color: Teal;">
+                <h2>Advertising</h2>
+                <p>To utilize my working skills towards a challenging career in growth oriented and leading edge that
+                    will
+                    provide mutual benefits and from where I can utilize my capabilities to the fullest benefits of the
+                    organization and society. </p>
+            </div>
+            <div class="service-item" style="background-color: Teal;">
+                <h2>Apps</h2>
+                <p>To utilize my working skills towards a challenging career in growth oriented and leading edge that
+                    will
+                    provide mutual benefits and from where I can utilize my capabilities to the fullest benefits of the
+                    organization and society. </p>
+
+            </div>
+        </div>
+
+    </section>
+
+
+
+
+
+
+    <section>
+        <footer>
+            <h3>Mission <span class="coral-color">2022</span></h3>
+            <p>Hardwork Perseverance, and Determine for 2022</p>
+        </footer>
+    </section>
+
+
 </body>
 
 </html>
