--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                 mutual benefits and from where I can utilize my capabilities to the fullest benefits of the organization
                 and
                 society. </p>
-            <a class="link-button" target="_blank" href="https://github.com/amrafi30">Explore Now</a>
-            <p id="about-us">Scroll down to explore more about us</p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/abdul-matin-aa3156196/">HIRE ME</a>
+            <p id="more-about">Scroll down to explore more about me.</p>
         </div>
         <div class="half-width">
             <img src="images/person/person-1.png" alt="">
@@ -45,31 +45,25 @@
                     <img src="images/illustrators/illustrator-1.png" alt="">
                 </div>
                 <h2>Mission</h2>
-                <p>To utilize my working skills towards a challenging career in growth oriented and leading edge that
-                    will
-                    provide mutual benefits and from where I can utilize my capabilities to the fullest benefits of the
-                    organization and society. </p>
+                <p>Being a professional web developer my mission is to provide customer-centric, result-oriented,
+                    cost-competitive innovative & functional Web Development Solutions to my valuable global clients.
+                </p>
             </div>
             <div class="mission-item" style="background-color: LavenderBlush;">
                 <div>
                     <img src="images/illustrators/illustrator-2.png" alt="">
                 </div>
                 <h2>Vission</h2>
-                <p>To utilize my working skills towards a challenging career in growth oriented and leading edge that
-                    will
-                    provide mutual benefits and from where I can utilize my capabilities to the fullest benefits of the
-                    organization and society. </p>
+                <p>To become a prime performer, in providing quality Web, Print and Software solutions in the
+                    competitive global market place.</p>
             </div>
             <div class="mission-item" style="background-color: LightYellow;">
                 <div>
                     <img src="images/illustrators/illustrator-3.png" alt="">
                 </div>
                 <h2>Goals</h2>
-                <p>To utilize my working skills towards a challenging career in growth oriented and leading edge that
-                    will
-                    provide mutual benefits and from where I can utilize my capabilities to the fullest benefits of the
-                    organization and society. </p>
-
+                <p>As a Web developer, I want to be able to design Web pages that can effectively display material,
+                    provide interactivity, and be artistically pleasing to the user.</p>
             </div>
         </div>
 
@@ -77,32 +71,27 @@
 
     <!----------------------------SecondHalfWidth-------------------------------------------->
 
-    <section class=" second-half-background flexible-container">
+    <section class="flexible-container">
         <div class="second-half-width">
             <img src="images/pictures/coding.png" alt="">
         </div>
         <div class="second-half-width">
             <h1>Develop<br>Without Limits</h1>
-            <p>To utilize my working skills towards a challenging career in growth oriented and leading edge that will
-                provide
-                mutual benefits and from where I can utilize my capabilities to the fullest benefits of the organization
-                and
-                society.</p>
+            <p>Being a web developer I've done some web development professional works. Here I've attached some of my
+                works and accomplisments
+                with proper technical documentation.</p>
             <a class="link-button" target="_blank" href="https://github.com/amrafi30">Read The Documentation</a>
         </div>
     </section>
 
-    <section class=" third-half-background flexible-container">
+    <section class="flexible-container">
         <div class="half-width">
             <h1>Know our <br>Global Community</h1>
-            <p>To utilize my working skills towards a challenging career in growth oriented and leading edge that will
-                provide
-                mutual benefits and from where I can utilize my capabilities to the fullest benefits of the organization
-                and
-                society. </p>
-            <a class="link-button" target="_blank" href="https://github.com/amrafi30">Read The Documentation</a>
+            <p>A developer community is a group of developers gathered in a place to achieve a common goal.</p>
+            <a class="link-button" target="_blank" href="https://stackoverflow.com/users/17849435/abdul-matin">Read The
+                Documentation</a>
         </div>
-        <div class="half-width">
+        <div id="background-img" class="half-width">
             <img src="images/pictures/project.png" alt="">
         </div>
 
@@ -111,29 +100,25 @@
     <!-------------------------------Service------------------------------>
 
     <section class="service-area">
-        <h1>My Services <br> <span class="coral-color" style="font-size: 10px;">what i provide</span></h1>
+        <h1>My Services <br> <span class="coral-color" style="font-size: 20px;">what i provide</span></h1>
 
         <div class="flexible-container">
-            <div class="service-item" style="background-color: Teal;">
+            <div class="service-item">
                 <h2>Web Design</h2>
-                <p>To utilize my working skills towards a challenging career in growth oriented and leading edge that
-                    will
-                    provide mutual benefits and from where I can utilize my capabilities to the fullest benefits of the
-                    organization and society. </p>
+                <p>Product portfolio, we also offer customized services for both profit and non-profit organizations. By
+                    crafting intelligent and efficient systems that tailor to the exclusive needs of wide array of our
+                    clients worldwide.</p>
             </div>
-            <div class="service-item" style="background-color: Teal;">
+            <div class="service-item">
                 <h2>Advertising</h2>
-                <p>To utilize my working skills towards a challenging career in growth oriented and leading edge that
-                    will
-                    provide mutual benefits and from where I can utilize my capabilities to the fullest benefits of the
-                    organization and society. </p>
+                <p>And now the advertising design reflected in your print ads and marketing collateral can be
+                    re-purposed across web, mobile, and email media. Gone are the days of a “one-shot” ad in a newspaper
+                    or magazine. </p>
             </div>
-            <div class="service-item" style="background-color: Teal;">
+            <div class="service-item">
                 <h2>Apps</h2>
-                <p>To utilize my working skills towards a challenging career in growth oriented and leading edge that
-                    will
-                    provide mutual benefits and from where I can utilize my capabilities to the fullest benefits of the
-                    organization and society. </p>
+                <p>Mobile app development is the act or process by which a mobile app is developed for mobile devices,
+                    such as personal digital assistants, enterprise digital assistants or mobile phones. </p>
 
             </div>
         </div>
@@ -142,13 +127,13 @@
 
 
 
-
+    <!---------------------------------footer---------------------------------->
 
 
     <section>
         <footer>
             <h3>Mission <span class="coral-color">2022</span></h3>
-            <p>Hardwork Perseverance, and Determine for 2022</p>
+            <p>Hardwork, Perseverance and Determine for 2022</p>
         </footer>
     </section>
 
