--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <p>Being a web developer I've done some web development professional works. Here I've attached some of my
                 works and accomplisments
                 with proper technical documentation.</p>
-            <a class="link-button" target="_blank" href="https://github.com/amrafi30">Read The Documentation</a>
+            <a class="link-button" target="_blank" href="https://github.com/AMrafi">Read The Documentation</a>
         </div>
     </section>
 
@@ -88,8 +88,8 @@
         <div class="half-width">
             <h1>Know our <br>Global Community</h1>
             <p>A developer community is a group of developers gathered in a place to achieve a common goal.</p>
-            <a class="link-button" target="_blank" href="https://stackoverflow.com/users/17849435/abdul-matin">Read The
-                Documentation</a>
+            <a class="link-button" target="_blank" href="https://stackoverflow.com/users/17849435/abdul-matin">Join Our
+                Community</a>
         </div>
         <div id="background-img" class="half-width">
             <img src="images/pictures/project.png" alt="">
@@ -106,7 +106,7 @@
             <div class="service-item">
                 <h2>Web Design</h2>
                 <p>Product portfolio, we also offer customized services for both profit and non-profit organizations. By
-                    crafting intelligent and efficient systems that tailor to the exclusive needs of wide array of our
+                    crafting intelligent and efficient systems that tailor to the exclusive needs of wide array of my
                     clients worldwide.</p>
             </div>
             <div class="service-item">
